--- a/source/NadamLib.Tests/Lib.UTests.csproj
+++ b/source/NadamLib.Tests/Lib.UTests.csproj
@@ -50,7 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DirectedGraphTests.cs" />
+    <Compile Include="GraphTests\BinaryTreeTests.cs" />
+    <Compile Include="GraphTests\DirectedGraphTests.cs" />
     <Compile Include="ExtensionsLibTests.cs" />
     <Compile Include="BinaryPredicatesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="TestModels\TestDataSeed.cs" />
     <Compile Include="TestModels\UnitTestingModelBase.cs" />
     <Compile Include="TestModels\UnitTestingModelType.cs" />
-    <Compile Include="TreeTests.cs" />
+    <Compile Include="GraphTests\TreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nadam.ConsoleTest\JsonDb.ConsoleTest.csproj">
