--- a/source/Nadam.Lib/Nadam.Global.Lib.csproj
+++ b/source/Nadam.Lib/Nadam.Global.Lib.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Nadam.Global.Lib</RootNamespace>
-    <AssemblyName>Nadam.Lib</AssemblyName>
+    <AssemblyName>Nadam.Global.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -33,7 +33,7 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Nadam.Lib.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Nadam.Global.Lib.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
