--- a/source/Javascript/Nadam/package.json
+++ b/source/Javascript/Nadam/package.json
@@ -1,18 +1,19 @@
 {
-	"name": "nadam.jslib",
-	"version": "1.0.0",
-	"description": "",
-	"main": "",
-	"scripts": {
-		"test": "gulp scripts"
-	},
-	"author": "adam nagy",
-	"license": "ISC",
-	"dependencies": {},
-	"devDependencies": {
-		"gulp": "^3.9.1",
-		"gulp-concat": "^2.6.1",
-		"gulp-rename": "^1.4.0",
-		"gulp-uglify": "^3.0.1"
-	}
+    "name": "nadam.jslib",
+    "version": "1.0.0",
+    "description": "",
+    "main": "",
+    "scripts": {
+        "test": "gulp scripts"
+    },
+    "author": "adam nagy",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-minify": "^3.1.0",
+        "gulp-uglify": "^3.0.1",
+        "pump": "^3.0.0"
+    }
 }
