--- a/DotNet/Scraper/Scraper/Scraper.csproj
+++ b/DotNet/Scraper/Scraper/Scraper.csproj
@@ -140,6 +140,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\V1Controller.cs" />
+    <Compile Include="Controllers\V2Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -148,34 +150,53 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="web_modules\bootstrap\bootstrap-grid.css" />
-    <Content Include="web_modules\bootstrap\bootstrap-grid.min.css" />
-    <Content Include="web_modules\bootstrap\bootstrap-reboot.css" />
-    <Content Include="web_modules\bootstrap\bootstrap-reboot.min.css" />
-    <Content Include="web_modules\bootstrap\bootstrap.css" />
-    <Content Include="web_modules\bootstrap\bootstrap.min.css" />
-    <Content Include="web_modules\app\app.js" />
-    <Content Include="web_modules\bootstrap\bootstrap.bundle.js" />
-    <Content Include="web_modules\bootstrap\bootstrap.bundle.min.js" />
-    <Content Include="web_modules\bootstrap\bootstrap.js" />
-    <Content Include="web_modules\bootstrap\bootstrap.min.js" />
-    <Content Include="web_modules\jquery\jquery-ui.css" />
-    <Content Include="web_modules\jquery\jquery-ui.js" />
-    <Content Include="web_modules\jquery\jquery-ui.min.css" />
-    <Content Include="web_modules\jquery\jquery-ui.min.js" />
-    <Content Include="web_modules\jquery\jquery-ui.structure.css" />
-    <Content Include="web_modules\jquery\jquery-ui.structure.min.css" />
-    <Content Include="web_modules\jquery\jquery-ui.theme.css" />
-    <Content Include="web_modules\jquery\jquery-ui.theme.min.css" />
-    <Content Include="web_modules\jquery\jquery-v3.4.0.js" />
-    <Content Include="web_modules\nadam\nadam.dom-filter.js" />
-    <Content Include="web_modules\nadam\nadam.http.js" />
-    <Content Include="web_modules\nadam\nadam.side-pager.component.js" />
+    <Content Include="web-app-v1\app\Scripts\webhack.gallery.component.js" />
+    <Content Include="web-app-v1\app\Scripts\webhack.global-vars.js" />
+    <Content Include="web-app-v1\app\Scripts\webhack.ftp-helper.js" />
+    <Content Include="web-app-v1\app\Scripts\webhack.galley-model.js" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-grid.css" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-grid.min.css" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-reboot.css" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-reboot.min.css" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.css" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.min.css" />
+    <Content Include="web-app-v1\app\Scripts\app.js" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.bundle.js" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.bundle.min.js" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.js" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.min.js" />
+    <Content Include="web-app-v1\jquery\jquery-ui.css" />
+    <Content Include="web-app-v1\jquery\jquery-ui.js" />
+    <Content Include="web-app-v1\jquery\jquery-ui.min.css" />
+    <Content Include="web-app-v1\jquery\jquery-ui.min.js" />
+    <Content Include="web-app-v1\jquery\jquery-ui.structure.css" />
+    <Content Include="web-app-v1\jquery\jquery-ui.structure.min.css" />
+    <Content Include="web-app-v1\jquery\jquery-ui.theme.css" />
+    <Content Include="web-app-v1\jquery\jquery-ui.theme.min.css" />
+    <Content Include="web-app-v1\jquery\jquery-v3.4.0.js" />
+    <Content Include="web-app-v1\nadam\nadam.dom-filter.js" />
+    <Content Include="web-app-v1\nadam\nadam.http.js" />
+    <Content Include="web-app-v1\nadam\nadam.removable.element.js" />
+    <Content Include="web-app-v1\nadam\nadam.side-pager.component.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="web_modules\app\app.css" />
-    <Content Include="web_modules\nadam\nadam.side-pager.component.css" />
+    <Content Include="web-app-v1\app\Styles\app.css" />
+    <Content Include="web-app-v1\nadam\nadam.side-pager.component.css" />
+    <Content Include="Views\V1\Index.cshtml" />
+    <None Include="Views\V2\Index.cshtml" />
+    <Content Include="web-app-v2\src\app\webhack.app.js" />
+    <Content Include="web-app-v2\src\app\webhack.ftp-helper.lib.js" />
+    <Content Include="web-app-v2\src\app\webhack.gallery.component.js" />
+    <Content Include="web-app-v2\src\app\webhack.galley.model.js" />
+    <Content Include="web-app-v2\src\app\webhack.babe-sources.vars.js" />
+    <Content Include="web-app-v2\src\app\webhack.image-metadata.model.js" />
+    <Content Include="web-app-v2\src\index.js" />
+    <Content Include="web-app-v2\src\nadam\nadam.dom-filter.control.js" />
+    <Content Include="web-app-v2\src\nadam\nadam.http.lib.js" />
+    <Content Include="web-app-v2\src\nadam\nadam.removable.element.js" />
+    <Content Include="web-app-v2\src\nadam\nadam.side-pager.control.js" />
+    <Content Include="web-app-v2\webpack.config.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -187,30 +208,32 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="web_modules\nadam\nadam.webhack.urlgalleries.js" />
+    <Content Include="web-app-v1\app\Scripts\webhack.urlgalleries-hacker.js" />
+    <Content Include="web-app-v2\package-lock.json" />
+    <Content Include="web-app-v2\package.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="web-app-v2\dist\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="web_modules\bootstrap\bootstrap-grid.css.map" />
-    <Content Include="web_modules\bootstrap\bootstrap-grid.min.css.map" />
-    <Content Include="web_modules\bootstrap\bootstrap-reboot.css.map" />
-    <Content Include="web_modules\bootstrap\bootstrap-reboot.min.css.map" />
-    <Content Include="web_modules\bootstrap\bootstrap.css.map" />
-    <Content Include="web_modules\bootstrap\bootstrap.min.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-grid.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-grid.min.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-reboot.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap-reboot.min.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.css.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.min.css.map" />
     <Content Include="package-lock.json" />
     <Content Include="package.json" />
     <None Include="packages.config" />
-    <Content Include="web_modules\bootstrap\bootstrap.bundle.js.map" />
-    <Content Include="web_modules\bootstrap\bootstrap.bundle.min.js.map" />
-    <Content Include="web_modules\bootstrap\bootstrap.js.map" />
-    <Content Include="web_modules\bootstrap\bootstrap.min.js.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.bundle.js.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.bundle.min.js.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.js.map" />
+    <Content Include="web-app-v1\bootstrap\bootstrap.min.js.map" />
     <Content Include="Views\Shared\_bootstrap.cshtml" />
     <Content Include="Views\Shared\_nadam.cshtml" />
     <Content Include="Views\Shared\_jquery.cshtml" />
