--- a/modern-components/classic-and-modern/package.json
+++ b/modern-components/classic-and-modern/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1"
   }
 }
