--- a/web/Scraper/web-app-v2/package.json
+++ b/web/Scraper/web-app-v2/package.json
@@ -12,10 +12,16 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
+    "style-loader": "^0.23.1",
+    "css-loader": "^2.1.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "popper.js": "^1.15.0"
   }
 }
