--- a/web/Scraper/web-app-v2/package.json
+++ b/web/Scraper/web-app-v2/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
+    "jquery-bridget": "^2.0.1",
     "jquery-ui": "^1.12.1",
+    "masonry-layout": "^4.2.2",
     "popper.js": "^1.15.0"
   }
 }
