--- a/modern-components/classic-and-modern/package.json
+++ b/modern-components/classic-and-modern/package.json
@@ -12,14 +12,16 @@
   "devDependencies": {
     "ts-loader": "^5.3.0",
     "webpack": "^4.25.1",
-	"webpack-cli": "^3.1.2",
-	"style-loader": "^0.23.1",
-	"css-loader": "^2.1.1"
+    "webpack-cli": "^3.1.2",
+    "style-loader": "^0.23.1",
+    "css-loader": "^2.1.1"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",    
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "jquery-bridget": "^2.0.1",
     "jquery-ui": "^1.12.1",
-    "popper.js": "^1.15.0"    
+    "masonry-layout": "^4.2.2",
+    "popper.js": "^1.15.0"
   }
 }
