--- a/web/Scraper/Scraper.csproj
+++ b/web/Scraper/Scraper.csproj
@@ -185,7 +185,8 @@
     <Content Include="web-app-v1\nadam\nadam.side-pager.component.css" />
     <Content Include="Views\V1\Index.cshtml" />
     <None Include="Views\V2\Index.cshtml" />
-    <Content Include="web-app-v3_dist\index.bundle.js" />
+    <Content Include="web-app-v3_dist\app.bundle.js" />
+    <Content Include="web-app-v3_dist\bootstrap.bundle.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
