--- a/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
+++ b/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
@@ -41,13 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbQueryProvider.cs" />
-    <Compile Include="ObjectReader.cs" />
+    <Compile Include="base\ExpressionVisitor.cs" />
+    <Compile Include="demoImplementation\Customers.cs" />
+    <Compile Include="demoImplementation\DbQueryProvider.cs" />
+    <Compile Include="base\ObjectReader.cs" />
+    <Compile Include="demoImplementation\Northwind.cs" />
+    <Compile Include="demoImplementation\Orders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query.cs" />
-    <Compile Include="QueryProvider.cs" />
-    <Compile Include="QueryTranslator.cs" />
-    <Compile Include="TypeSystem.cs" />
+    <Compile Include="base\Query.cs" />
+    <Compile Include="base\QueryProvider.cs" />
+    <Compile Include="base\QueryTranslator.cs" />
+    <Compile Include="base\TypeSystem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
