--- a/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
+++ b/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
@@ -42,11 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="base\ExpressionVisitor.cs" />
-    <Compile Include="demoImplementation\Customers.cs" />
-    <Compile Include="demoImplementation\DbQueryProvider.cs" />
+    <Compile Include="implementation\Customers.cs" />
+    <Compile Include="implementation\DbQueryProvider.cs" />
     <Compile Include="base\ObjectReader.cs" />
-    <Compile Include="demoImplementation\Northwind.cs" />
-    <Compile Include="demoImplementation\Orders.cs" />
+    <Compile Include="implementation\Northwind.cs" />
+    <Compile Include="implementation\Orders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="base\Query.cs" />
     <Compile Include="base\QueryProvider.cs" />
