--- a/DotNet/CshTryouts/CustomQueryable.Tests/CustomQueryable.Tests.csproj
+++ b/DotNet/CshTryouts/CustomQueryable.Tests/CustomQueryable.Tests.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinqToFolderSystemTests.cs" />
     <Compile Include="LinqToSqlTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
