--- a/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
+++ b/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="EnumerablePattern\YieldUseage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringNum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
