--- a/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
+++ b/DotNet/CshTryouts/CustomQueryable/CustomQueryable.csproj
@@ -41,11 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinqToFolderSystem\ExpressionTreeModifier.cs" />
-    <Compile Include="LinqToFolderSystem\FileSystemContext .cs" />
-    <Compile Include="LinqToFolderSystem\FileSystemElement.cs" />
-    <Compile Include="LinqToFolderSystem\FileSystemProvider .cs" />
-    <Compile Include="LinqToFolderSystem\FileSystemQueryContext.cs" />
+    <Compile Include="LinqToFileSystem\ExpressionTreeModifier.cs" />
+    <Compile Include="LinqToFileSystem\FileSystemContext .cs" />
+    <Compile Include="LinqToFileSystem\FileSystemElement.cs" />
+    <Compile Include="LinqToFileSystem\FileSystemProvider .cs" />
+    <Compile Include="LinqToFileSystem\FileSystemQueryContext.cs" />
     <Compile Include="LinqToSql\base\ExpressionVisitor.cs" />
     <Compile Include="LinqToSql\implementation\Customers.cs" />
     <Compile Include="LinqToSql\implementation\DbQueryProvider.cs" />
@@ -57,6 +57,9 @@
     <Compile Include="LinqToSql\base\QueryProvider.cs" />
     <Compile Include="LinqToSql\base\QueryTranslator.cs" />
     <Compile Include="LinqToSql\base\TypeSystem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LinqToJson\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
