--- a/web/spa-libs/mithril/with-redux/package.json
+++ b/web/spa-libs/mithril/with-redux/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@babel/core": "^7.4.4",
 		"mithril": "^2.0.0-rc.4",
-		"react-redux": "^7.0.3",
+		"mithril-redux": "^1.0.0",
 		"redux": "^4.0.1"
 	},
 	"devDependencies": {
