mithril with jsx and redux-basic sample works

--- a/web/spa-libs/mithril/with-redux/.babelrc
+++ b/web/spa-libs/mithril/with-redux/.babelrc
@@ -1,8 +1,9 @@
 {
-    "presets": ["@babel/env"],
+    "presets": ["@babel/preset-env"],
     "plugins": [
-        ["transform-react-jsx", {
-            "pragma": "m"
+        ["@babel/plugin-transform-react-jsx", {
+            "pragma": "m",
+            "pragmaFrag": "'['"
         }]
     ]
 }
