--- a/web/spa-libs/mithril/with-redux/package.json
+++ b/web/spa-libs/mithril/with-redux/package.json
@@ -1,30 +1,27 @@
 {
-	"name": "with-redux",
-	"version": "1.0.0",
-	"description": "demo app for mithril and redux",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack --config webpack.config.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@babel/core": "^7.4.4",
-		"mithril": "^2.0.0-rc.4",
-		"mithril-redux": "^1.0.0",
-		"redux": "^4.0.1"
-	},
-	"devDependencies": {
-		"ts-loader": "^5.3.0",
-		"webpack": "^4.25.1",
-		"webpack-cli": "^3.1.2",
-		"@babel/preset-env": "^7.4.4",
-		"@babel/preset-es2015": "^7.0.0-beta.53",
-		"@types/mithril": "^1.1.16",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-loader": "^8.0.5",
-		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"babel-preset-es2015": "^6.24.1"
-	}
+  "name": "with-redux",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "ts-loader": "^5.3.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "mithril": "^0.2.0",
+    "mithril-redux": "^1.0.0-beta.0",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3"
+  }
 }
