--- a/web/spa-libs/mithril/with-redux/.babelrc
+++ b/web/spa-libs/mithril/with-redux/.babelrc
@@ -1,6 +1,7 @@
 {
-    "presets": ["@babel/preset-env"],
+    "presets": ["@babel/preset-typescript", "@babel/preset-env"],
     "plugins": [
+		"transform-class-properties",
         ["@babel/plugin-transform-react-jsx", {
             "pragma": "m",
             "pragmaFrag": "'['"
