--- a/web/spa-libs/mithril/with-redux/package.json
+++ b/web/spa-libs/mithril/with-redux/package.json
@@ -13,8 +13,11 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "babel-loader": "^8.0.6",
-    "ts-loader": "^5.3.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.5.3",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
