--- a/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
+++ b/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="EnumerablePattern\MyEnumerable.cs" />
     <Compile Include="EnumerablePattern\YieldUseage.cs" />
+    <Compile Include="ImgToBase64\Image2Base64.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionExtensions.cs" />
