php unit 1 and image resize csh proj

--- a/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
+++ b/DotNet/CshTryouts/CshTryouts/CshTryouts.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,7 +46,7 @@
   <ItemGroup>
     <Compile Include="EnumerablePattern\MyEnumerable.cs" />
     <Compile Include="EnumerablePattern\YieldUseage.cs" />
-    <Compile Include="ImgToBase64\Image2Base64.cs" />
+    <Compile Include="ImageManipulation\ImageManipulation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionExtensions.cs" />
