--- a/Typescript/CustomElements/package.json
+++ b/Typescript/CustomElements/package.json
@@ -16,8 +16,11 @@
     "@types/lodash": "^4.14.144",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^4.2.0",
     "gulp": "^4.0.2",
     "gulp-html-replace": "^1.6.2",
+    "image-webpack-loader": "^6.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -29,12 +32,11 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
-    "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "jquery-bridget": "^2.0.1",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.15",
-    "masonry-layout": "^4.2.2",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "slick-carousel": "^1.8.1"
   }
 }
