--- a/Typescript/CustomElements/package.json
+++ b/Typescript/CustomElements/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
-    "@types/jquery": "^3.3.29",
+	"@types/jquery": "^3.3.31",
+	"@types/jqueryui": "^1.12.8",
     "@types/lodash": "^4.14.144",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
@@ -29,11 +30,10 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2"
   },
-  "dependencies": {
+  "dependencies": {    
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "jquery-bridget": "^2.0.1",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
