--- a/Typescript/ndm-v1/package.json
+++ b/Typescript/ndm-v1/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ndm-demo",
+  "name": "ndm-v1",
   "version": "1.0.0",
-  "description": "",
+  "description": "adam nagy self developed spa lib",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js && gulp copy-templates",
     "copy-templates": "gulp copy-templates"
   },
   "author": "Adam Nagy",
