--- a/Typescript/Redux/package.json
+++ b/Typescript/Redux/package.json
@@ -32,11 +32,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "jquery-ui": "^1.12.1",
     "lodash": "^4.17.15",
-    "popper.js": "^1.15.0",
-    "slick-carousel": "^1.8.1"
+    "redux": "^4.0.4"
   }
 }
