--- a/Front-End/spa-libs/Angular/ng-cli-demo/package.json
+++ b/Front-End/spa-libs/Angular/ng-cli-demo/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
