--- a/DotNet/CshTryouts/Graphs/Graphs.csproj
+++ b/DotNet/CshTryouts/Graphs/Graphs.csproj
@@ -48,17 +48,19 @@
     <Compile Include="DirectedGraph\DirectedGraph.cs" />
     <Compile Include="DirectedGraph\DirectedNode.cs" />
     <Compile Include="DirectedGraph\IDirectedGraph.cs" />
-    <Compile Include="Tree2\LinkedNode.cs" />
+    <Compile Include="Trees\LinkedTree\ILinkedTreeNode.cs" />
+    <Compile Include="Trees\LinkedTree\LinkedTreeNode.cs" />
     <Compile Include="Graph\Edge.cs" />
     <Compile Include="Graph\Graph.cs" />
     <Compile Include="Graph\IGraph.cs" />
     <Compile Include="Graph\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tree\Iterators\LevelOrderEnumerator.cs" />
-    <Compile Include="Tree\Iterators\PostOrderTreeEnumerator.cs" />
-    <Compile Include="Tree\Iterators\PreOrderTreeEnumerator.cs" />
-    <Compile Include="Tree\ITree.cs" />
-    <Compile Include="Tree\Tree.cs" />
+    <Compile Include="Trees\Iterators\LevelOrderEnumerator.cs" />
+    <Compile Include="Trees\Iterators\PostOrderTreeEnumerator.cs" />
+    <Compile Include="Trees\Iterators\PreOrderTreeEnumerator.cs" />
+    <Compile Include="Trees\ITree.cs" />
+    <Compile Include="Trees\MediatorTree\Tree.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
