--- a/DotNet/MyUtils/FileRepositoryApi/FileRepositoryApi.csproj
+++ b/DotNet/MyUtils/FileRepositoryApi/FileRepositoryApi.csproj
@@ -125,14 +125,14 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManifestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\FilemanifestRequestModel.cs" />
-    <Compile Include="Models\ReadonlyFilemanifest.cs" />
-    <Compile Include="Models\FilemanifestRepository.cs" />
+    <Compile Include="Models\ManifestRequestModel.cs" />
+    <Compile Include="Models\ReadonlyManifest.cs" />
+    <Compile Include="Models\ManifestRepository.cs" />
+    <Compile Include="Models\ThumbnailResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
