--- a/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
+++ b/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
@@ -12,8 +12,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FileRepositoryApi</RootNamespace>
-    <AssemblyName>FileRepositoryApi</AssemblyName>
+    <RootNamespace>ManifestRepositoryApi</RootNamespace>
+    <AssemblyName>ManifestRepositoryApi</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
