--- a/DotNet/MyUtils/ManifestRepositoryApi.Tests/ManifestRepositoryApi.Tests.csproj
+++ b/DotNet/MyUtils/ManifestRepositoryApi.Tests/ManifestRepositoryApi.Tests.csproj
@@ -51,8 +51,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Http, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManifestControllerTests.cs" />
+    <Compile Include="ManifestRepositoryTests.cs" />
     <Compile Include="WebGalleryManifestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -64,6 +68,9 @@
       <Project>{7e1cb9e5-23dd-4f2c-a6b7-7197d4265de5}</Project>
       <Name>ManifestRepositoryApi</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="test-files\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
