--- a/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
+++ b/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
@@ -126,13 +126,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ManifestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="ManifestFramework\LocalGalleryManifest.cs" />
     <Compile Include="ManifestFramework\WebGalleryManifest.cs" />
+    <Compile Include="Models\AdminViewModel.cs" />
     <Compile Include="Models\ManifestRequestModel.cs" />
     <Compile Include="ManifestFramework\ReadonlyManifest.cs" />
     <Compile Include="ManifestFramework\ManifestRepository.cs" />
@@ -140,8 +143,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Admin\admin.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -161,6 +168,10 @@
     <None Include="Properties\PublishProfiles\manifest-repository - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\manifest-repository - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\manifest-repository - Web Deploy.pubxml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
