update test project to .net4.7.1, adding action types

--- a/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
+++ b/DotNet/MyUtils/FileRepositoryApi/ManifestRepositoryApi.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\Actions.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -145,11 +146,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\jquery-v3.4.0.js" />
     <Content Include="Styles\bootstrap.min.css" />
     <Content Include="Styles\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\admin.js" />
+    <Content Include="Views\Admin\admin.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -158,6 +160,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
