--- a/Typescript/Rxjs/package.json
+++ b/Typescript/Rxjs/package.json
@@ -15,6 +15,7 @@
     "@types/jquery": "^3.3.31",
     "@types/jqueryui": "^1.12.8",
     "@types/lodash": "^4.14.144",
+    "@types/rx": "^4.1.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "expose-loader": "^0.7.5",
@@ -35,6 +36,7 @@
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4"
   }
 }
