--- a/DotNet/StreamSeeking.Tests/StreamSeeking.Tests.csproj
+++ b/DotNet/StreamSeeking.Tests/StreamSeeking.Tests.csproj
@@ -52,13 +52,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonSeekerTests\AddValueToArrayTest.cs" />
     <Compile Include="JsonSeekerTests\GetPropertyTypeTests.cs" />
     <Compile Include="JsonSeekerTests\GetValuePositionTests.cs" />
     <Compile Include="JsonSeekerTests\IsFistParenthesesClosedTests.cs" />
     <Compile Include="JsonSeekerTests\IsJsonValueClosedTests.cs" />
     <Compile Include="JsonSeekerTests\SetValueTests.cs" />
     <Compile Include="MockClasses\MockData.cs" />
-    <Compile Include="MockClasses\TestJsonModel.cs" />
+    <Compile Include="MockClasses\TestJsonModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonSeekerTests\ReadValueTests.cs" />
     <Compile Include="StreamSeekerTests\ReadFromTests.cs" />
